# Match3

./: .gitignore  CMakeLists.txt  DISPLAY_MODE_PLAN.md  DISPLAY_MODULE_IMPLEMENTATION.md  DISPLAY_MODULE_SUMMARY_EN.md  IMPLEMENTATION_PLAN.md  UNIFIED_COORDINATE_SYSTEM_PLAN.md  vcpkg.json
.github/workflows/: build.yml  ci-simple.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/feathernest/match3/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/feathernest/match3/: MainActivity.kt
android/app/src/main/java/com/feathernestz/match3/: MainActivity.kt
android/app/src/main/jniLibs/: README.md
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/feathernest/match3/: ExampleUnitTest.kt
android/gradle/wrapper/: README.md  gradle-wrapper.properties
cmake/: AndroidToolchain.cmake  CheckModules.cmake  CheckToolchain.cmake
cmake/Modules/: FindEntt.cmake  FindFmt.cmake  FindJson.cmake  FindSDL3.cmake  FindSDL3_ttf.cmake  FindSpdlog.cmake
scripts/: bootstrap-android.sh  build-all-android.sh  build-android.sh  build-apk.sh  generate-launcher-icons.sh
src/: CMakeLists.txt  main.cpp
src/Components/: Animation.hpp  Common.hpp  Gem.hpp  Particle.hpp
src/Core/: Config.hpp  Game.cpp  Game.hpp  Logger.cpp  Logger.hpp
src/Display/: DisplayManager.cpp  DisplayManager.hpp  DisplayMode.hpp  DisplaySettings.cpp  DisplaySettings.hpp  PlatformDisplay.cpp  PlatformDisplay.hpp  README.md  ResolutionManager.cpp  ResolutionManager.hpp  ViewportManager.cpp  ViewportManager.hpp
src/Factories/: EntityFactory.cpp  EntityFactory.hpp
src/Game/: Board.cpp  Board.hpp  GameState.cpp  GameState.hpp  Gem.cpp  Gem.hpp  MatchDetector.cpp  MatchDetector.hpp
src/Input/: InputManager.cpp  InputManager.hpp  MouseHandler.cpp  MouseHandler.hpp
src/Managers/: GameStateManager.cpp  GameStateManager.hpp  SystemManager.cpp  SystemManager.hpp
src/Render/: FontRenderer.cpp  FontRenderer.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Texture.cpp  Texture.hpp
src/Scenes/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SettingsScene.cpp  SettingsScene.hpp
src/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  BoardSystem.cpp  BoardSystem.hpp  LifetimeSystem.cpp  LifetimeSystem.hpp  MatchDetectionSystem.cpp  MatchDetectionSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SwapSystem.cpp  SwapSystem.hpp  System.hpp
src/UI/: UIManager.cpp  UIManager.hpp
src/UI/Components/: Button.cpp  Button.hpp  Label.cpp  Label.hpp  Panel.cpp  Panel.hpp  UIComponent.cpp  UIComponent.hpp
src/Utils/: Easing.hpp
